<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash_gradient2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <View
                android:id="@+id/ruler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:textColor="@color/teal_200"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/wakeup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/icon_wakeup"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/wakeup"
                android:textColor="@color/teal_200"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/daily" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_turquoist"
                app:layout_constraintTop_toBottomOf="@id/wakeup" />

            <TextView
                android:id="@+id/eat"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/icon_eating"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/eat"
                android:textColor="@color/teal_200"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ruler"
                app:layout_constraintTop_toBottomOf="@id/wakeup" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_turquoist"
                app:layout_constraintTop_toBottomOf="@id/eat" />

            <TextView
                android:id="@+id/study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/icon_study"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/study"
                android:textColor="@color/teal_200"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_turquoist"
                app:layout_constraintTop_toBottomOf="@id/study" />

            <TextView
                android:id="@+id/cleaning"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/icon_clean"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/clean"
                android:textColor="@color/teal_200"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ruler"
                app:layout_constraintTop_toBottomOf="@id/study" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_turquoist"
                app:layout_constraintTop_toBottomOf="@id/cleaning" />

            <TextView
                android:id="@+id/quality_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/icon_qualitytime"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/quality_time"
                android:textColor="@color/teal_200"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cleaning" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/teal_200"
                app:layout_constraintTop_toBottomOf="@id/quality_time" />

            <TextView
                android:id="@+id/sleep"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/icon_sleep"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/sleep"
                android:textColor="@color/teal_200"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/ruler"
                app:layout_constraintTop_toBottomOf="@id/quality_time" />

            <View
                android:id="@+id/last"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_turquoist"
                app:layout_constraintTop_toBottomOf="@id/sleep" />

            <View
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layout_constraintTop_toBottomOf="@id/last" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>